[package]
name = "axum2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }

[dev-dependencies]
tower = { version = "0.4.13" }
http-body-util = { version = "0.1.0"}
mime = {version = "0.3.17"}
serde_json = "1.0.114"

